[gd_scene load_steps=5 format=4 uid="uid://bq2jsav4qnt8k"]

[ext_resource type="Script" uid="uid://byfyt5xssi53f" path="res://scenes/boost_panel.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://8sorr10f66nw" path="res://textures/icons/money.png" id="2"]
[ext_resource type="Texture2D" uid="uid://xn8ygwin6tfb" path="res://textures/icons/pause.png" id="3"]
[ext_resource type="Texture2D" uid="uid://ctd0qhiaqmdqt" path="res://textures/icons/token.png" id="4"]

[node name="ExploitPanel" type="Panel"]
custom_minimum_size = Vector2(0, 190)
anchor_right = 1.0
offset_bottom = 120.0
grow_horizontal = 2
mouse_filter = 1
theme_type_variation = &"MenuPanelTitle"
script = ExtResource("1")

[node name="IconPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = 145.0
offset_bottom = -15.0
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"BackPanel"

[node name="Icon" type="TextureRect" parent="IconPanel"]
self_modulate = Color(0.567, 0.69465, 0.9, 1)
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -60.0
offset_right = 35.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(35, 35)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2")
expand_mode = 1

[node name="Duration" type="Label" parent="IconPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -55.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.627451, 0.776471, 0.811765, 1)
text = "+60m"
horizontal_alignment = 1

[node name="InfoContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 160.0
offset_top = 8.0
offset_right = -199.0
offset_bottom = 182.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Name" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Income"

[node name="Description" type="Label" parent="InfoContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_colors/font_color = Color(0.627451, 0.776471, 0.811765, 1)
theme_override_constants/line_spacing = -4
text = "Increases income by 100% for 10 minutes"
vertical_alignment = 1
autowrap_mode = 3

[node name="Pause" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -175.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = 89.0
grow_horizontal = 0
focus_mode = 0
theme_override_constants/icon_max_width = 40
icon = ExtResource("3")
icon_alignment = 1
expand_icon = true

[node name="Purchase" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -175.0
offset_top = -89.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme_type_variation = &"ButtonHighlighted"

[node name="CostContainer" type="HBoxContainer" parent="Purchase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Icon" type="TextureRect" parent="Purchase/CostContainer"]
self_modulate = Color(1, 0.521569, 0, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4")
expand_mode = 1

[node name="Label" type="Label" parent="Purchase/CostContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 0.521569, 0, 1)
text = "50"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Purchase" to="." method="_on_purchase_pressed"]
